# Algorithm-Visualizer

./: CS617_A3_DataPrep.ipynb  CS617_BostonPD.ipynb  Cargo.toml  README.md  audio.js  build.sh  comparison.js  dockerfile  index.html  script.js  sorting.js  styles.css  visualizer.html
js/: base.js  bfs.js  binary_search.js  bubble_sort.js  dfs.js  linear_search.js  merge_sort.js  quick_sort.js
src/: bfs.rs  binary_search.rs  bubble_sort.rs  dfs.rs  lib.rs  linear_search.rs  merge_sort.rs  quick_sort.rs  utils.rs
